metadata/force-app/main/default/objects/ccrz__E_ProductGuide__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <description>The product this guide belongs to.</description>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>CC Product Guides</relationshipLabel>
    <relationshipName>E_ProductGuides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>