metadata/force-app/main/default/objects/ccrz__E_ProductGuide__c/fields/ccrz__RelatedProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RelatedProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product Group</label>
    <referenceTo>ccrz__E_RelatedProductGroup__c</referenceTo>
    <relationshipLabel>CC Product Guides</relationshipLabel>
    <relationshipName>E_ProductGuides</relationshipName>
    <type>Lookup</type>
</CustomField>