metadata/force-app/main/default/objects/ccrz__E_ProductGuide__c/fields/ccrz__Required__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a selection within this guide is required.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>